--- a/scss/index.scss
+++ b/scss/index.scss
@@ -148,10 +148,10 @@
         width: 100%;
         height: 20px;
         font-size: 15px;
+        text-indent: 0;
+        padding-left: 10px
     }
 
-
-    
     #course-unit {
         @extend %input;
         width: 50px;
@@ -163,7 +163,7 @@
     #course-name::placeholder, #course-unit::placeholder {
         font-size: 15px;
         color: $white;
-        opacity: 30%;
+        opacity: 80%;
     }
 
 
@@ -412,12 +412,8 @@ nav {
 
 
 
-
-
-
-
 .info-tab {
-    width: 100%;
+    width: 80%;
     height: 100vh;
     padding: 20px;
     background-color: white;
