--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -74,3 +74,61 @@ $white:#fff;
         transform:rotate(360deg);
     }
 }
+
+
+
+
+
+.instruction-icon {
+    width: 40px;
+    height: 40px;
+    border-radius: 25%;
+    border: 1px solid $blue;
+    background-color: $white;
+    box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.3);
+
+    position: fixed;
+    top: 80%;
+    right: 20px;
+    z-index: 2;
+
+
+    display: none;
+    align-items: center;
+    justify-content: center;
+    font-size: 25px;
+    color: red;
+
+    animation: anim1 2s infinite;
+
+    @keyframes anim1 {
+        0% {
+           transform: rotate(0); 
+        }
+
+        20% {
+            transform: scale(70%);
+        }
+
+
+        40% {
+            transform: rotate(45deg) scale(90%); 
+        }
+
+
+        80% {
+            transform: rotate(-45deg) scale(100%); 
+        }
+
+        100% {
+            transform: rotate(0deg); 
+        }
+
+    }
+}
+
+
+
+.instruction-icon.opened {
+    animation: none;
+}
