--- a/scss/index.scss
+++ b/scss/index.scss
@@ -72,12 +72,16 @@
         transform: scale(100%);
     }
 
-    50% {
+    40% {
         transform: scale(80%);
     }
 
+    80% {
+        transform: translateY(30px);
+    }
+
     100% {
-        transform: translateY(10px);
+        transform: translateY(0px) scale(100%);
     }
 }
 
