--- a/scss/index.scss
+++ b/scss/index.scss
@@ -618,9 +618,11 @@ h1 {
     position: absolute;
     top: 0;
     left:0;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.5);
     z-index: 10000;
     display: none;
+
+
 
 
     #close-instruction {
@@ -629,6 +631,33 @@ h1 {
         border-radius: 50%;
         background-color: red;
         float: right;
+    }
+
+    ul {
+        width: 100%;
+        padding: 10px;
+
+        position: absolute;
+        bottom: 0%;
+        left: 0px;
+        list-style: none;
+        margin-top: 350px;
+
+        li {
+            width: auto;
+            border-radius: 10px;
+            font-size: 15px;
+            background-color: $white;
+
+            color: $blue;
+            padding: 10px 20px;
+            margin-bottom: 10px;
+
+            em {
+                font-size: 20px;
+                font-style: normal;
+            }
+        }
     }
 }
 
