--- a/scss/index.scss
+++ b/scss/index.scss
@@ -635,7 +635,9 @@ h1 {
 
     ul {
         width: 100%;
+        height: 220px;
         padding: 10px;
+
 
         position: absolute;
         bottom: 0%;
@@ -645,13 +647,17 @@ h1 {
 
         li {
             width: auto;
+            height: auto;
             border-radius: 10px;
             font-size: 15px;
             background-color: $white;
 
             color: $blue;
             padding: 10px 20px;
-            margin-bottom: 10px;
+
+            &:not(:last-of-type) {
+                margin-bottom: 5px;
+            }
 
             em {
                 font-size: 20px;
