--- a/scss/index.scss
+++ b/scss/index.scss
@@ -617,7 +617,7 @@ h1 {
 
 .instructions {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     padding: 25px;
 
     position: absolute;
@@ -647,7 +647,7 @@ h1 {
         bottom: 0px;
         left: 0px;
         list-style: none;
-        margin-top: 350px;
+        margin-top: 50px;
 
         li {
             width: auto;
