--- a/scss/index.scss
+++ b/scss/index.scss
@@ -424,23 +424,23 @@ nav {
 
     z-index: 200000;
     transform: translateX(-100vw);
-    opacity: 0;
-    visibility: hidden;
+    // opacity: 0;
+    // visibility: hidden;
     
     &.active {
         transform: translateX(0);
-        opacity: 1;
-        visibility: visible;
+        // opacity: 1;
+        // visibility: visible;
     
-        transition: all 0.3s ease-in-out;
+        transition: all 0.6s ease-in-out;
     }
     
     &.closed {
         transform: translateX(-100vw);
-        opacity: 0;
-        visibility: hidden;
+        // opacity: 0;
+        // visibility: hidden;
         
-        transition: all 0.3s ease-in-out;
+        transition: all 0.6s ease-in-out;
     }
 }
 
