--- a/scss/index.scss
+++ b/scss/index.scss
@@ -630,6 +630,7 @@ h1 {
 
 
 
+
     #close-instruction {
         width: 20px;
         height: 20px;
@@ -640,7 +641,7 @@ h1 {
 
     ul {
         width: 100%;
-        height: 220px;
+        height: 250px;
         padding: 10px;
         overflow-y: auto;
 
@@ -648,7 +649,7 @@ h1 {
         bottom: 0px;
         left: 0px;
         list-style: none;
-        margin-top: 50px;
+
 
         li {
             width: auto;
@@ -659,6 +660,10 @@ h1 {
 
             color: $blue;
             padding: 10px 20px;
+
+            &:first-of-type {
+                margin-top: 40px;
+            }
 
             &:not(:last-of-type) {
                 margin-bottom: 5px;
