--- a/scss/index.scss
+++ b/scss/index.scss
@@ -34,7 +34,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    animation: remove-intro 3s forwards 2s;
+    animation: remove-intro 2.5s forwards 2s;
     transition: all 0.3s ease-out;
 }
 
@@ -73,20 +73,22 @@
     }
 
     40% {
-        transform: scale(80%);
+        transform: scale(90%);
     }
 
     60% {
         transform: scale(100%);
     }
 
-    80% {
+    70% {
         transform: translateY(30px);
+        transition: transform 0.2s ease-in;
     }
 
     100% {
-        transform: translateY(0px);
+        transform: translateY(-20px);
     }
+
 }
 
 
@@ -417,30 +419,24 @@ nav {
     height: 100vh;
     overflow-y: auto;
     padding: 20px;
-    background-color: white;
+    background-color: $white;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
     position: absolute;
     top: 0;
     left: 0;
 
     z-index: 200000;
     transform: translateX(-100vw);
-    // opacity: 0;
-    // visibility: hidden;
     display: none;
     
     &.active {
+        display: block;
         transform: translateX(0);
-        // opacity: 1;
-        // visibility: visible;
-    
         transition: all 0.6s ease-in-out;
     }
     
     &.closed {
         transform: translateX(-100vw);
-        // opacity: 0;
-        // visibility: hidden;
-        
         transition: all 0.6s ease-in-out;
     }
 }
